--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -263,6 +263,12 @@ a, .link-text {
   height: 300px !important;
   background-color: #BFCDDA !important; }
 
+@media (min-width: 992px) {
+  .navbar-toggler {
+    display: none; }
+
+  .nav-btn {
+    display: inline; } }
 @media (max-width: 575.98px) {
   .header {
     height: auto;
@@ -323,6 +329,25 @@ a, .link-text {
     width: 100%; }
 
   a, .link-text {
-    float: left; } }
+    float: left; }
+
+  .custom-nav {
+    width: 100%; }
+
+  .nav-btn {
+    display: none; }
+
+  .navbar-toggler {
+    display: list-item;
+    padding: 0px !important; }
+
+  .navbar-icon {
+    width: 35px;
+    height: 3px;
+    background-color: black;
+    margin: 6px 0; }
+
+  .nav-item {
+    padding: 5px 5px; } }
 
 /*# sourceMappingURL=style.css.map */
