--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -319,8 +319,8 @@ a, .link-text {
     padding: 40px 20px; }
 
   .card {
-    width: 16rem !important;
-    margin-bottom: 20px; }
+    width: 90% !important;
+    margin: 15px; }
 
   .section-four {
     padding: 40px 20px; }
