--- a/Assets/scss/_header.scss
+++ b/Assets/scss/_header.scss
@@ -360,8 +360,8 @@ a,.link-text{
    padding: 40px 20px;
   }
   .card{
-   width: 16rem !important;
-   margin-bottom: 20px;
+   width: 90% !important;
+   margin: 15px;
   }
   .section-four{
    padding: 40px 20px;
@@ -390,7 +390,7 @@ a,.link-text{
    }
    .nav-item{
       padding:5px 5px;
-      
+
    }
 
   
