--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,6 +2,46 @@ h1, h2, h3, h4 {
   padding: 0 !important;
   margin: 0 !important; }
 
+@font-face {
+  font-family: 'Gilroy-Bold';
+  src: url("../fonts/Gilroy-Bold.eot");
+  /* IE9 Compat Modes */
+  src: url("../fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.ttf") format("truetype"), url("../fonts/Gilroy-Bold.svg#svgFontName") format("svg");
+  /* Legacy iOS */
+  font-weight: 700;
+  font-style: normal; }
+@font-face {
+  font-family: 'Gilroy-Heavy';
+  src: url("../fonts/Gilroy-Bold.eot");
+  /* IE9 Compat Modes */
+  src: url("../fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.ttf") format("truetype"), url("../fonts/Gilroy-Bold.svg#svgFontName") format("svg");
+  /* Legacy iOS */
+  font-weight: 700;
+  font-style: normal; }
+@font-face {
+  font-family: 'Gilroy-Light';
+  src: url("../fonts/Gilroy-Light.eot");
+  /* IE9 Compat Modes */
+  src: url("../fonts/Gilroy-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Light.woff2") format("woff2"), url("../fonts/Gilroy-Light.woff") format("woff"), url("../fonts/Gilroy-Light.ttf") format("truetype"), url("../fonts/Gilroy-Light.svg#svgFontName") format("svg");
+  /* Legacy iOS */
+  font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'Gilroy-Medium';
+  src: url("../fonts/Gilroy-Medium.eot");
+  /* IE9 Compat Modes */
+  src: url("../fonts/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Medium.woff2") format("woff2"), url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.ttf") format("truetype"), url("../fonts/Gilroy-Medium.svg#svgFontName") format("svg");
+  /* Legacy iOS */
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'Gilroy-Regular';
+  src: url("../fonts/Gilroy-Regular.eot");
+  /* IE9 Compat Modes */
+  src: url("../fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff"), url("../fonts/Gilroy-Regular.ttf") format("truetype"), url("../fonts/Gilroy-Regular.svg#svgFontName") format("svg");
+  /* Legacy iOS */
+  font-weight: 500;
+  font-style: normal; }
 .header {
   height: 650px;
   background-color: #E5E5E5; }
@@ -21,7 +61,10 @@ h1, h2, h3, h4 {
 
 .btn-sign-in, a {
   color: #1E2B5E !important;
-  text-decoration-color: #1E2B5E !important; }
+  text-decoration-color: #1E2B5E !important;
+  font-family: Gilroy-Medium;
+  font-size: 14px;
+  line-height: 22px; }
 
 .btn-sign-up {
   background-color: #113BEA !important;
@@ -29,7 +72,10 @@ h1, h2, h3, h4 {
 
 .btn-sign-up, a {
   color: #FFFFFF !important;
-  text-decoration-color: #1E2B5E !important; }
+  text-decoration-color: #1E2B5E !important;
+  font-family: Gilroy-Medium;
+  font-size: 14px;
+  line-height: 22px; }
 
 .header-layout {
   width: 90%;
@@ -39,12 +85,14 @@ h1, h2, h3, h4 {
   padding-left: 27px !important; }
 
 .header-text {
+  font-family: Gilroy-Bold;
   font-size: 45px;
   line-height: 50px; }
 
 .header-sub-text {
-  font-size: 18px;
-  line-height: 25px;
+  font-family: Gilroy-Regular;
+  font-size: 16px;
+  line-height: 22px;
   padding-bottom: 35px; }
 
 .btn-create {
@@ -53,14 +101,20 @@ h1, h2, h3, h4 {
   padding: 10px 10px !important; }
 
 .btn-create > a {
-  color: #FFFFFF !important; }
+  color: #FFFFFF !important;
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px; }
 
 .btn-enroll {
   border: 1px solid #1E2B5E !important;
   padding: 9px 10px !important; }
 
 .btn-enroll > a {
-  color: #1E2B5E !important; }
+  color: #1E2B5E !important;
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px; }
 
 .section-one {
   height: auto;
@@ -69,13 +123,14 @@ h1, h2, h3, h4 {
   background-color: #113BEA; }
 
 .section-head {
-  width: 40%;
+  width: 50%;
   margin: auto; }
 
 .section-title {
-  font-size: 30px;
+  font-family: Gilroy-Bold;
+  font-size: 38px;
+  line-height: 51px;
   color: #FFFFFF;
-  line-height: 45px;
   text-align: center; }
 
 #line-img {
@@ -97,7 +152,9 @@ h1, h2, h3, h4 {
   margin-top: 150px; }
 
 .box-text {
+  font-family: Gilroy-Medium;
   font-size: 14px;
+  line-height: 22px;
   text-align: center;
   padding: 5px !important; }
 
@@ -133,7 +190,10 @@ h1, h2, h3, h4 {
   text-align: center; }
 
 .stage-text {
-  font-size: 14px;
+  color: #FFFFFF;
+  font-family: Gilroy-Medium;
+  font-size: 12px;
+  line-height: 16px;
   padding: 7px !important; }
 
 .stage1 {
@@ -157,6 +217,9 @@ h1, h2, h3, h4 {
   padding: 10px 10px !important; }
 
 .btn-create-now > a {
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px;
   color: #1E2B5E !important; }
 
 .btn-enroll-now {
@@ -165,7 +228,10 @@ h1, h2, h3, h4 {
   padding: 10px 10px !important; }
 
 .btn-enroll-now > a {
-  color: #ffffff !important; }
+  color: #ffffff !important;
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px; }
 
 .section-two {
   padding: 60px 100px;
@@ -173,8 +239,10 @@ h1, h2, h3, h4 {
   background-color: #F7FAFF; }
 
 .content-header {
-  font-size: 24px;
-  line-height: 24px;
+  font-family: Gilroy-Bold;
+  font-size: 38px;
+  line-height: 51px;
+  color: #1E2B5E;
   padding-top: 20px; }
 
 .content {
@@ -184,12 +252,17 @@ h1, h2, h3, h4 {
   padding-bottom: 5px; }
 
 .content-title {
-  font-size: 26px;
-  font-weight: 600; }
+  font-family: Gilroy-Bold;
+  font-size: 24px;
+  line-height: 32px;
+  color: #1E2B5E; }
 
 .content-text {
   padding: 15px 1px;
-  font-size: 16px; }
+  font-family: Gilroy-Regular;
+  font-size: 16px;
+  line-height: 25px;
+  color: #1E2B5E; }
 
 .section-three {
   padding: 60px 70px;
@@ -197,9 +270,10 @@ h1, h2, h3, h4 {
   background-color: #ffffff; }
 
 .section-Three-title {
-  font-size: 30px;
+  font-family: Gilroy-Bold;
+  font-size: 38px;
+  line-height: 51px;
   color: #1E2B5E;
-  line-height: 45px;
   display: inline-block; }
 
 .section-three-head, .section-three-body {
@@ -209,6 +283,11 @@ h1, h2, h3, h4 {
 .section-three-body {
   padding-top: 50px;
   padding-bottom: 100px; }
+
+.card {
+  width: 18rem !important;
+  height: 300px !important;
+  background-color: #BFCDDA !important; }
 
 #line-three-img {
   background-image: url(../Images/Vector2.png);
@@ -225,7 +304,9 @@ h1, h2, h3, h4 {
   background-repeat: no-repeat; }
 
 a, .link-text {
-  font-size: 16px !important;
+  font-family: Gilroy-Medium;
+  font-size: 15px !important;
+  line-height: 22px;
   color: rgba(30, 43, 94, 0.7) !important;
   text-decoration: none !important;
   float: right; }
@@ -236,7 +317,7 @@ a, .link-text {
   background-color: #F7FAFF; }
 
 .section-head-box {
-  width: 50%;
+  width: 70%;
   margin: auto; }
 
 .top-box {
@@ -249,6 +330,9 @@ a, .link-text {
 
 .topbox-content {
   color: #ffffff;
+  font-family: Gilroy-Medium;
+  font-size: 18px;
+  line-height: 24px;
   padding: 25px; }
 
 .btn-getstart {
@@ -257,12 +341,15 @@ a, .link-text {
   padding: 12px 12px !important; }
 
 .btn-getstart > a {
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px;
   color: #113BEA !important; }
 
-.card {
-  width: 18rem !important;
-  height: 300px !important;
-  background-color: #BFCDDA !important; }
+.footer-text {
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px; }
 
 @media (min-width: 992px) {
   .navbar-toggler {
