--- a/Assets/scss/_header.scss
+++ b/Assets/scss/_header.scss
@@ -59,7 +59,7 @@ h1, h2,h3,h4 {
  }
 .header{
    height:650px;
-   background-color:#E5E5E5 ;
+   background-color:#ffffff ;
    // border:1px solid red;
 }
 .custom-nav{
@@ -75,7 +75,7 @@ h1, h2,h3,h4 {
    border: 1px solid #1E2B5E !important; 
    margin-right: 20px !important;
 }
-.btn-sign-in,a{
+.btn-sign-in > a{
    color: #1E2B5E !important;
    text-decoration-color: #1E2B5E !important;
    font-family: Gilroy-Medium;
@@ -84,9 +84,8 @@ h1, h2,h3,h4 {
 }
 .btn-sign-up{
    background-color: #113BEA !important;
-   color: #FFFFFF !important;
 }
-.btn-sign-up,a{
+.btn-sign-up > a{
    color: #FFFFFF !important;
    text-decoration-color: #1E2B5E !important;
    font-family: Gilroy-Medium;
@@ -135,6 +134,14 @@ h1, h2,h3,h4 {
    font-family: Gilroy-Medium;
    font-size: 15px;
    line-height: 22px;
+}
+
+.logo-box-header{
+   height: 130px !important;
+   background-color:#f5f5f5;
+   border-radius: 15px;
+   margin:100px auto;
+   z-index:1;
 }
 
 
@@ -339,7 +346,7 @@ h1, h2,h3,h4 {
     background-position: left;
     background-repeat: no-repeat;
 }
-a,.link-text{
+.link-text{
    font-family: Gilroy-Medium;
    font-size: 15px !important;
    line-height: 22px;
