--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -43,7 +43,7 @@ h1, h2, h3, h4 {
   font-weight: 500;
   font-style: normal; }
 .header {
-  height: 650px;
+  height: 670px;
   background-color: #ffffff; }
 
 .custom-nav {
@@ -57,7 +57,9 @@ h1, h2, h3, h4 {
 
 .btn-sign-in {
   border: 1px solid #1E2B5E !important;
-  margin-right: 20px !important; }
+  margin-right: 20px !important;
+  border-radius: 4px !important;
+  padding: 10px 23px !important; }
 
 .btn-sign-in > a {
   color: #1E2B5E !important;
@@ -67,7 +69,9 @@ h1, h2, h3, h4 {
   line-height: 22px; }
 
 .btn-sign-up {
-  background-color: #113BEA !important; }
+  background-color: #113BEA !important;
+  border-radius: 4px !important;
+  padding: 10px 23px !important; }
 
 .btn-sign-up > a {
   color: #FFFFFF !important;
@@ -86,18 +90,23 @@ h1, h2, h3, h4 {
 .header-text {
   font-family: Gilroy-Bold;
   font-size: 45px;
-  line-height: 50px; }
+  line-height: 50px;
+  color: #1E2B5E; }
+
+.header-color {
+  color: #113BEA; }
 
 .header-sub-text {
   font-family: Gilroy-Regular;
   font-size: 16px;
   line-height: 22px;
-  padding-bottom: 35px; }
+  padding-bottom: 35px;
+  color: rgba(30, 43, 94, 0.7); }
 
 .btn-create {
   background-color: #113BEA !important;
-  margin-right: 20px !important;
-  padding: 10px 10px !important; }
+  margin-right: 32px !important;
+  padding: 16px 33px !important; }
 
 .btn-create > a {
   color: #FFFFFF !important;
@@ -107,7 +116,7 @@ h1, h2, h3, h4 {
 
 .btn-enroll {
   border: 1px solid #1E2B5E !important;
-  padding: 9px 10px !important; }
+  padding: 16px 33px !important; }
 
 .btn-enroll > a {
   color: #1E2B5E !important;
@@ -124,7 +133,7 @@ h1, h2, h3, h4 {
 
 .section-one {
   height: auto;
-  padding-top: 70px;
+  padding-top: 30px;
   padding-bottom: 50px;
   background-color: #113BEA; }
 
@@ -146,11 +155,11 @@ h1, h2, h3, h4 {
 
 .section-content {
   width: 80%;
-  height: 400px;
-  margin: 50px auto !important; }
+  height: 320px;
+  margin: 10px auto !important; }
 
 .class-box {
-  height: 70px !important;
+  height: 60px !important;
   padding: 10px !important;
   background-color: #fff;
   border-radius: 67px;
@@ -161,12 +170,11 @@ h1, h2, h3, h4 {
   font-family: Gilroy-Medium;
   font-size: 14px;
   line-height: 22px;
-  text-align: center;
-  padding: 5px !important; }
+  text-align: center; }
 
 .logo-box {
-  height: 180px !important;
-  padding: 10px !important;
+  height: 160px !important;
+  padding: 44px 48px !important;
   background-color: #fff;
   border-radius: 15px;
   margin-left: 150px;
@@ -181,18 +189,18 @@ h1, h2, h3, h4 {
   z-index: 1; }
 
 .stage-chart {
-  height: 350px !important;
+  height: 300px !important;
   background-color: #fff;
+  padding: 10px !important;
   border-radius: 18.1px;
   margin-left: 150px;
-  margin-top: 20px;
-  padding: 10px !important; }
+  margin-top: 10px; }
 
 .bar {
   width: 70%;
   height: 40px;
   border-radius: 5px;
-  margin: 20px auto !important;
+  margin: 15px auto !important;
   text-align: center; }
 
 .stage-text {
@@ -220,7 +228,7 @@ h1, h2, h3, h4 {
 .btn-create-now {
   background-color: #FFFFFF !important;
   margin: auto !important;
-  padding: 10px 10px !important; }
+  padding: 16px 33px !important; }
 
 .btn-create-now > a {
   font-family: Gilroy-Medium;
@@ -230,8 +238,9 @@ h1, h2, h3, h4 {
 
 .btn-enroll-now {
   background-color: #113BEA !important;
-  margin: auto !important;
-  padding: 10px 10px !important; }
+  margin: 20px auto !important;
+  padding: 16px 33px !important;
+  border-radius: 4px !important; }
 
 .btn-enroll-now > a {
   color: #ffffff !important;
@@ -240,7 +249,7 @@ h1, h2, h3, h4 {
   line-height: 22px; }
 
 .section-two {
-  padding: 60px 100px;
+  padding: 40px 100px;
   height: auto;
   background-color: #F7FAFF; }
 
@@ -252,10 +261,10 @@ h1, h2, h3, h4 {
   padding-top: 20px; }
 
 .content {
-  margin-top: 40px; }
+  margin-top: 30px; }
 
 .content1 {
-  padding-bottom: 5px; }
+  padding-bottom: 10px; }
 
 .content-title {
   font-family: Gilroy-Bold;
@@ -264,14 +273,13 @@ h1, h2, h3, h4 {
   color: #1E2B5E; }
 
 .content-text {
-  padding: 15px 1px;
   font-family: Gilroy-Regular;
   font-size: 16px;
   line-height: 25px;
   color: #1E2B5E; }
 
 .section-three {
-  padding: 60px 70px;
+  padding: 40px 80px;
   height: auto;
   background-color: #ffffff; }
 
@@ -344,7 +352,7 @@ h1, h2, h3, h4 {
 .btn-getstart {
   background-color: #ffffff  !important;
   margin: auto !important;
-  padding: 12px 12px !important; }
+  padding: 16px 33px !important; }
 
 .btn-getstart > a {
   font-family: Gilroy-Medium;
