--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -390,8 +390,14 @@ h1, h2, h3, h4 {
     width: 95% !important;
     margin: auto; }
 
+  .btn-create, .btn-enroll {
+    padding: 7px 7px !important; }
+
   .btn-create > a, .btn-enroll > a {
     font-size: 13px !important; }
+
+  .logo-box-header {
+    margin: 20px auto !important; }
 
   .header-sub-text {
     padding-bottom: 5px; }
@@ -414,7 +420,7 @@ h1, h2, h3, h4 {
     margin: 10px auto; }
 
   .section-one {
-    height: 900px; }
+    height: 750px; }
 
   .section-two {
     padding: 40px 20px; }
