--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -124,12 +124,53 @@ h1, h2, h3, h4 {
   font-size: 15px;
   line-height: 22px; }
 
+.round-cont {
+  width: 200px;
+  height: 200px;
+  margin: 70px auto; }
+
+.round-cont img {
+  max-width: 100%;
+  position: absolute; }
+
+.round-cont img:nth-child(1) {
+  left: 190px;
+  top: 30px; }
+
+.round-cont img:nth-child(2) {
+  left: 290px;
+  top: 10px; }
+
+.round-cont img:nth-child(3) {
+  left: 380px;
+  top: 30px; }
+
+.round-cont img:nth-child(4) {
+  left: 140px;
+  top: 140px; }
+
+.round-cont img:nth-child(5) {
+  left: 410px;
+  top: 140px; }
+
+.round-cont img:nth-child(6) {
+  left: 190px;
+  top: 250px; }
+
+.round-cont img:nth-child(7) {
+  left: 290px;
+  top: 280px; }
+
+.round-cont img:nth-child(8) {
+  left: 380px;
+  top: 250px; }
+
 .logo-box-header {
-  height: 130px !important;
+  width: 100px !important;
+  height: 100px !important;
   background-color: #f5f5f5;
   border-radius: 15px;
-  margin: 100px auto;
-  z-index: 1; }
+  margin: 110px auto; }
 
 .section-one {
   height: auto;
@@ -396,9 +437,6 @@ h1, h2, h3, h4 {
   .btn-create > a, .btn-enroll > a {
     font-size: 13px !important; }
 
-  .logo-box-header {
-    margin: 20px auto !important; }
-
   .header-sub-text {
     padding-bottom: 5px; }
 
@@ -458,6 +496,73 @@ h1, h2, h3, h4 {
     margin: 6px 0; }
 
   .nav-item {
-    padding: 5px 5px; } }
+    padding: 5px 5px; }
+
+  .round-cont {
+    width: 200px;
+    height: 200px;
+    margin: 70px auto; }
+
+  .round-cont img {
+    max-width: 100%;
+    position: absolute; }
+
+  .round-cont img:nth-child(1) {
+    left: 50px;
+    top: 30px; }
+
+  .round-cont img:nth-child(2) {
+    left: 150px;
+    top: 10px; }
+
+  .round-cont img:nth-child(3) {
+    left: 250px;
+    top: 30px; }
+
+  .round-cont img:nth-child(4) {
+    left: 10px;
+    top: 140px; }
+
+  .round-cont img:nth-child(5) {
+    left: 250px;
+    top: 140px; }
+
+  .round-cont img:nth-child(6) {
+    left: 50px;
+    top: 250px; }
+
+  .round-cont img:nth-child(7) {
+    left: 150px;
+    top: 280px; }
+
+  .round-cont img:nth-child(8) {
+    left: 250px;
+    top: 250px; } }
+h1, h2, h3, h4 {
+  padding: 0 !important;
+  margin: 0 !important; }
+
+.section-sign-up {
+  height: 600px;
+  background-color: #ffffff;
+  overflow-x: hidden; }
+
+.sign-up {
+  padding: 147px 100px; }
+
+.img-line {
+  border-right: 0.2px solid #1E2B5E; }
+
+.signup-logo {
+  width: 403px;
+  height: 101px;
+  margin-top: 100px; }
+
+.form-head {
+  font-family: Gilroy-Bold;
+  font-size: 18px;
+  line-height: 24px;
+  color: #1E2B5E;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
