--- a/Assets/scss/_header.scss
+++ b/Assets/scss/_header.scss
@@ -143,13 +143,59 @@ h1, h2,h3,h4 {
    font-size: 15px;
    line-height: 22px;
 }
+.round-cont {
+   width:200px;
+   height:200px;
+   margin:70px auto;
+ }
+ 
+ .round-cont img {
+   max-width:100%;
+   position:absolute;
+ }
+ 
+ .round-cont img:nth-child(1){
+   left:190px;
+   top:30px;
+ }
+ 
+ .round-cont img:nth-child(2){
+   left:290px;
+   top:10px;
+ }
+ 
+ .round-cont img:nth-child(3){
+   left:380px;
+   top:30px;
+ }
+ .round-cont img:nth-child(4){
+   left:140px;
+   top:140px;
+ }
+ .round-cont img:nth-child(5){
+   left:410px;
+   top:140px;
+ }
+ .round-cont img:nth-child(6){
+   left:190px;
+   top:250px;
+ }
+ .round-cont img:nth-child(7){
+   left:290px;
+   top:280px;
+ }
+ .round-cont img:nth-child(8){
+   left:380px;
+   top:250px;
+ }
+ 
 
 .logo-box-header{
-   height: 130px !important;
+   width:100px !important;
+   height:100px !important;
    background-color:#f5f5f5;
    border-radius: 15px;
-   margin:100px auto;
-   z-index:1;
+   margin:110px auto;
 }
 
 
@@ -446,11 +492,7 @@ h1, h2,h3,h4 {
    padding:7px 7px !important;
   }
   .btn-create > a,.btn-enroll> a{
-     font-size:13px !important;
-     
-  }
-  .logo-box-header{
-     margin:20px auto !important;
+     font-size:13px !important;   
   }
   .header-sub-text {
      padding-bottom:5px;
@@ -514,8 +556,51 @@ h1, h2,h3,h4 {
    .nav-item{
       padding:5px 5px;
    }
-
-  
+   .round-cont {
+      width:200px;
+      height:200px;
+      margin:70px auto;
+    }
+    
+    .round-cont img {
+      max-width:100%;
+      position:absolute;
+    }
+    
+    .round-cont img:nth-child(1){
+      left:50px;
+      top:30px;
+    }
+    
+    .round-cont img:nth-child(2){
+      left:150px;
+      top:10px;
+    }
+    
+    .round-cont img:nth-child(3){
+      left:250px;
+      top:30px;
+    }
+    .round-cont img:nth-child(4){
+      left:10px;
+      top:140px;
+    }
+    .round-cont img:nth-child(5){
+      left:250px;
+      top:140px;
+    }
+    .round-cont img:nth-child(6){
+      left:50px;
+      top:250px;
+    }
+    .round-cont img:nth-child(7){
+      left:150px;
+      top:280px;
+    }
+    .round-cont img:nth-child(8){
+      left:250px;
+      top:250px;
+    } 
 }
 
 // Small devices (landscape phones, less than 768px)
