--- a/Assets/scss/_header.scss
+++ b/Assets/scss/_header.scss
@@ -58,7 +58,7 @@ h1, h2,h3,h4 {
      font-style: normal;
  }
 .header{
-   height:670px;
+   height:100vh;
    background-color:#ffffff ;
 }
 .custom-nav{
@@ -94,6 +94,12 @@ h1, h2,h3,h4 {
    font-family: Gilroy-Medium;
    font-size: 14px;
    line-height: 22px;
+}
+.header-img{
+   background-image: url(../Images/header_image\ _illustration.svg);
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: contain;
 }
 
 .header-layout{
@@ -201,8 +207,8 @@ h1, h2,h3,h4 {
 
 .section-one{
    height: auto; 
-   padding-top: 30px;
-   padding-bottom:50px ;
+   padding-top: 4em;
+   padding-bottom:4em;
    background-color: #113BEA;
 }
 
