--- a/Assets/scss/_signUp.scss
+++ b/Assets/scss/_signUp.scss
@@ -3,7 +3,7 @@ h1, h2,h3,h4 {
    margin: 0 !important;  
 }
 .section-sign-up{
-   height:600px;
+   height:100vh;
    background-color:#ffffff;
    overflow-x: hidden;
 }
