--- a/Assets/scss/_signIn.scss
+++ b/Assets/scss/_signIn.scss
@@ -17,7 +17,7 @@ h1, h2,h3,h4 {
 .signup-logo{
    width:403px;
    height:101px;
-   margin-top:200px;
+   margin-top:220px;
 }
 .form-head{
    font-family: Gilroy-Bold;
@@ -40,7 +40,7 @@ select.form-control {
   margin:45px 60px;
 }
 
-.btn-signup{
+.btn-signin{
    margin:10px 60px;
    width:85%;
    background-color: #113BEA !important;
