--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -507,7 +507,7 @@ body {
     margin: 6px 0; }
 
   .nav-item {
-    padding: 5px 5px; }
+    padding: 7px 5px; }
 
   .round-cont {
     width: 200px;
@@ -580,15 +580,20 @@ h1, h2, h3, h4 {
 .form {
   margin-top: 70px; }
 
-input[type="text"], input[type="password"],
-select.form-control {
+input[type="email"], input[type="text"], input[type="password"], select.form-control {
   width: 85%;
   background: transparent;
   border: none;
   border-bottom: 0.7px solid rgba(30, 43, 94, 0.7);
   box-shadow: none;
   border-radius: 0;
-  margin: 45px 60px; }
+  margin: 45px 0px 0px 60px !important; }
+
+.password {
+  margin-bottom: 60px !important; }
+
+.invalid-feedback {
+  margin-left: 65px; }
 
 .btn-signup {
   margin: 10px 60px;
@@ -610,7 +615,12 @@ select.form-control {
   font-family: Gilroy-Medium !important;
   font-size: 13px !important;
   line-height: 16px !important;
-  color: rgba(30, 43, 94, 0.6) !important; }
+  color: rgba(30, 43, 94, 0.6) !important;
+  transition: none !important; }
+
+.form-control:focus {
+  box-shadow: none !important;
+  border-color: #113BEA !important; }
 
 .btn-text {
   font-family: Gilroy-Medium;
@@ -666,46 +676,55 @@ select.form-control {
 .fa-facebook-square {
   color: #395185; }
 
+@media (max-width: 575.98px) {
+  .sign-up {
+    padding: 20px 30px; }
+
+  .signup-logo {
+    width: 250px;
+    height: 70px;
+    margin: 30px auto; }
+
+  .form-head {
+    margin-top: 30px !important; }
+
+  input[type="email"],
+  input[type="text"],
+  input[type="password"],
+  select.form-control {
+    margin: 45px 0px 0px 10px !important; }
+
+  .btn-signup {
+    margin: 10px 20px; }
+
+  .password {
+    margin-bottom: 30px !important; }
+
+  .text-option {
+    margin-left: 0px; }
+
+  .btn-google, .btn-facebook {
+    margin-left: 0px;
+    margin-top: 20px; }
+
+  .text-option > p {
+    padding-bottom: 5px; } }
 h1, h2, h3, h4 {
   padding: 0 !important;
   margin: 0 !important; }
 
-.section-sign-up {
+.section-sign-in {
   height: 100vh;
   background-color: #ffffff;
   overflow-x: hidden; }
 
-.sign-up {
+.sign-in {
   padding: 100px 100px; }
 
-.vertical-line {
-  border-left: 5px solid red !important;
-  height: 70%; }
-
-.signup-logo {
+.signin-logo {
   width: 403px;
   height: 101px;
   margin-top: 220px; }
-
-.form-head {
-  font-family: Gilroy-Bold;
-  font-size: 18px;
-  line-height: 24px;
-  color: #1E2B5E;
-  text-align: center; }
-
-.form {
-  margin-top: 70px; }
-
-input[type="text"], input[type="password"],
-select.form-control {
-  width: 85%;
-  background: transparent;
-  border: none;
-  border-bottom: 0.7px solid rgba(30, 43, 94, 0.7);
-  box-shadow: none;
-  border-radius: 0;
-  margin: 45px 60px; }
 
 .btn-signin {
   margin: 10px 60px;
@@ -716,71 +735,110 @@ select.form-control {
   font-size: 15px !important;
   line-height: 22px !important; }
 
-.btn-google, .btn-facebook {
-  border: 0.5px solid #1E2B5E !important;
-  box-sizing: border-box;
-  border-radius: 4px !important;
-  margin-left: 20px; }
+@media (max-width: 575.98px) {
+  .sign-in {
+    padding: 20px 30px; }
 
-.form-control {
-  padding: .375rem 2.5rem !important;
+  .signin-logo {
+    width: 250px;
+    height: 70px;
+    margin: 30px auto; }
+
+  .form-head {
+    margin-top: 30px !important; }
+
+  input[type="email"],
+  input[type="password"],
+  select.form-control {
+    margin: 45px 0px 0px 10px !important; }
+
+  .btn-signin {
+    margin: 10px 20px; } }
+h1, h2, h3, h4 {
+  padding: 0 !important;
+  margin: 0 !important; }
+
+body {
+  overflow-x: hidden; }
+
+.custom-nav {
+  width: 90%;
+  margin: auto;
+  padding-top: 30px !important; }
+
+.course-logo {
+  width: 150px;
+  height: 45px; }
+
+.course-header-layout {
+  width: 85%;
+  margin: 135px auto; }
+
+.course-header {
+  color: #fff; }
+
+.course-text {
+  color: #fff; }
+
+.header {
+  background-color: #113BEA; }
+
+.course-section-one .title-bar {
+  width: 100%;
+  height: 60px;
+  background-color: #fff; }
+.course-section-one .course-card {
+  width: 100%;
+  background-color: #F8FCFF;
+  padding-top: 60px;
+  padding-bottom: 60px; }
+
+.bar-content {
+  margin: 30px auto 20px;
+  width: 85%; }
+
+.title-link {
+  color: #000;
+  padding-left: 20px;
   font-family: Gilroy-Medium !important;
-  font-size: 13px !important;
-  line-height: 16px !important;
-  color: rgba(30, 43, 94, 0.6) !important; }
+  font-size: 15px !important;
+  line-height: 22px !important; }
 
-.btn-text {
-  font-family: Gilroy-Medium;
-  font-size: 12px;
-  line-height: 16px;
-  color: #1E2B5E;
-  padding: 13px 5px; }
+.title-link:hover {
+  color: #1837E6;
+  text-decoration: underline; }
 
-.text-account {
-  font-family: Gilroy-Medium;
-  font-size: 13px;
-  line-height: 16px;
-  color: rgba(30, 43, 94, 0.6);
-  margin-top: 15px; }
+.card-section {
+  width: 90%;
+  margin: auto !important; }
 
-.text-option {
-  display: flex;
-  margin-left: 60px; }
+.card-section2 {
+  width: 90%;
+  margin: 50px auto !important; }
 
-.text-option > p {
-  font-family: Gilroy-Bold;
-  font-size: 12px;
-  line-height: 24px;
-  color: #113BEA;
-  padding-top: 15px;
-  padding-bottom: 25px;
-  padding-left: 5px;
-  padding-right: 5px; }
+.course {
+  width: 17rem !important;
+  height: 400px !important;
+  border: none !important;
+  background-color: #BFCDDA !important; }
 
-.text-account > span > a {
-  color: #B5DB8F !important; }
+.card-top {
+  height: 250px; }
 
-.right-line {
-  width: 48%;
-  height: 2px;
-  background-color: rgba(30, 43, 94, 0.3);
-  margin-top: 25px; }
+.card-title {
+  font-size: 16px; }
 
-.input-icons i {
-  position: absolute; }
+.card-body {
+  height: 150px;
+  background-color: #fff !important; }
 
-.input-icons {
-  width: 100%; }
+.img-container {
+  float: left;
+  margin-top: 30px; }
 
-.icon {
-  max-width: 50px;
-  margin: 6px 60px;
-  color: #113BEA; }
-
-.fa-google {
-  color: #FFC107; }
-
-.fa-facebook-square {
-  color: #395185; }
+.text {
+  float: right;
+  margin-top: 42px;
+  color: #6FBA2E; }
 
 /*# sourceMappingURL=style.css.map */
