--- a/Assets/scss/_signIn.scss
+++ b/Assets/scss/_signIn.scss
@@ -2,42 +2,18 @@ h1, h2,h3,h4 {
    padding: 0 !important;
    margin: 0 !important;  
 }
-.section-sign-up{
+.section-sign-in{
    height:100vh;
    background-color:#ffffff;
    overflow-x: hidden;
 }
-.sign-up{
+.sign-in{
    padding:100px 100px;
 }
-.vertical-line{
-   border-left: 5px solid red !important;
-   height: 70%;
-}
-.signup-logo{
+.signin-logo{
    width:403px;
    height:101px;
    margin-top:220px;
-}
-.form-head{
-   font-family: Gilroy-Bold;
-   font-size: 18px;
-   line-height: 24px;
-   color: #1E2B5E;
-   text-align: center;
-}
-.form{
-   margin-top: 70px;
-}
-input[type="text"],input[type="password"],
-select.form-control {
-  width: 85%;
-  background: transparent;
-  border: none;
-  border-bottom: 0.7px solid rgba(30, 43, 94, 0.7);
-  box-shadow: none;
-  border-radius: 0;
-  margin:45px 60px;
 }
 
 .btn-signin{
@@ -49,76 +25,26 @@ select.form-control {
    font-size: 15px !important;
    line-height: 22px !important;
 }
-.btn-google,.btn-facebook{
-   border: 0.5px solid #1E2B5E !important;
-   box-sizing: border-box;
-   border-radius: 4px !important;
-   margin-left:20px ;
-}
-.form-control{
-   padding: .375rem 2.5rem !important;
-   font-family: Gilroy-Medium !important;
-   font-size: 13px !important;
-   line-height: 16px !important;
-   color: rgba(30, 43, 94, 0.6) !important;
-}
-.btn-text{
-   font-family: Gilroy-Medium;
-   font-size: 12px;
-   line-height: 16px;
-   color: #1E2B5E;
-   padding: 13px 5px;
-}
-.text-account{
-   font-family: Gilroy-Medium;
-   font-size: 13px;
-   line-height: 16px;
-   color: rgba(30, 43, 94, 0.6);
-   margin-top: 15px;
-}
-.text-option {
-   display: flex;
-   margin-left:60px;  
-}
-.text-option > p{
-   font-family: Gilroy-Bold;
-   font-size: 12px;
-   line-height: 24px;
-   color: #113BEA;
-   padding-top: 15px;
-   padding-bottom: 25px;
-   padding-left: 5px;
-   padding-right: 5px;
-}
-.text-account > span>  a{
-   color:#B5DB8F !important;
-}
-.right-line{ 
-   width:48%;
-   height:2px;
-   background-color: rgba(30, 43, 94, 0.3);
-   margin-top: 25px;
-}
 
-.input-icons i { 
-   position: absolute; 
-} 
- 
-.input-icons { 
-   width: 100%;  
-} 
-
-.icon { 
-   max-width: 50px;
-   margin:6px 60px; 
-   color: #113BEA;
-} 
-.fa-google{
-   color:#FFC107;
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+   .sign-in{
+      padding:20px 30px;
+   }
+   .signin-logo{
+      width:250px;
+      height:70px;
+      margin:30px auto;
+   }
+   .form-head{
+      margin-top: 30px !important;
+   }
+   input[type="email"], 
+   input[type="password"], 
+   select.form-control{
+      margin: 45px 0px 0px 10px !important;
+   }
+   .btn-signin {
+      margin:10px 20px;
+   }
 }
-.fa-facebook-square{
-   color:#395185;
-}
-
-
- 
