--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -507,48 +507,7 @@ body {
     margin: 6px 0; }
 
   .nav-item {
-    padding: 7px 5px; }
-
-  .round-cont {
-    width: 200px;
-    height: 200px;
-    margin: 70px auto; }
-
-  .round-cont img {
-    max-width: 100%;
-    position: absolute; }
-
-  .round-cont img:nth-child(1) {
-    left: 50px;
-    top: 30px; }
-
-  .round-cont img:nth-child(2) {
-    left: 150px;
-    top: 10px; }
-
-  .round-cont img:nth-child(3) {
-    left: 250px;
-    top: 30px; }
-
-  .round-cont img:nth-child(4) {
-    left: 10px;
-    top: 140px; }
-
-  .round-cont img:nth-child(5) {
-    left: 250px;
-    top: 140px; }
-
-  .round-cont img:nth-child(6) {
-    left: 50px;
-    top: 250px; }
-
-  .round-cont img:nth-child(7) {
-    left: 150px;
-    top: 280px; }
-
-  .round-cont img:nth-child(8) {
-    left: 250px;
-    top: 250px; } }
+    padding: 7px 5px; } }
 h1, h2, h3, h4 {
   padding: 0 !important;
   margin: 0 !important; }
@@ -761,52 +720,69 @@ h1, h2, h3, h4 {
 body {
   overflow-x: hidden; }
 
-.custom-nav {
-  width: 90%;
+.custom-nav-course {
+  width: 95%;
   margin: auto;
-  padding-top: 30px !important; }
+  padding-top: 20px !important; }
 
 .course-logo {
-  width: 150px;
-  height: 45px; }
+  width: 229px;
+  height: 57.25px; }
 
 .course-header-layout {
   width: 85%;
   margin: 135px auto; }
 
 .course-header {
-  color: #fff; }
+  color: #fff;
+  font-family: Gilroy-Bold;
+  font-size: 50px;
+  line-height: 60px; }
 
 .course-text {
-  color: #fff; }
+  color: #fff;
+  font-family: Gilroy-Regular;
+  font-size: 17px;
+  line-height: 25px; }
 
 .header {
+  height: 90vh;
   background-color: #113BEA; }
 
-.course-section-one .title-bar {
+.title-bar {
   width: 100%;
-  height: 60px;
-  background-color: #fff; }
-.course-section-one .course-card {
-  width: 100%;
-  background-color: #F8FCFF;
-  padding-top: 60px;
-  padding-bottom: 60px; }
+  height: 70px;
+  display: flex;
+  background-color: #FFFFFF;
+  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.05); }
 
-.bar-content {
-  margin: 30px auto 20px;
-  width: 85%; }
+.webinar-box {
+  width: 120px;
+  height: 70px;
+  border-bottom: 2px solid #113BEA;
+  margin-left: 100px;
+  padding-top: 25px; }
+
+.course-box {
+  margin-left: 50px;
+  border-bottom: none; }
 
 .title-link {
-  color: #000;
+  color: #113BEA;
   padding-left: 20px;
   font-family: Gilroy-Medium !important;
-  font-size: 15px !important;
+  font-size: 18px !important;
   line-height: 22px !important; }
 
 .title-link:hover {
   color: #1837E6;
   text-decoration: underline; }
+
+.course-card {
+  width: 100%;
+  background-color: #F8FCFF;
+  padding-top: 60px;
+  padding-bottom: 60px; }
 
 .card-section {
   width: 90%;
@@ -826,19 +802,61 @@ body {
   height: 250px; }
 
 .card-title {
-  font-size: 16px; }
+  font-family: Gilroy-Bold;
+  font-size: 16px;
+  line-height: 24px;
+  color: #1E2B5E; }
+
+.card-top-one {
+  height: 100px !important; }
+
+.card-detail {
+  height: 300px;
+  background-color: #fff !important; }
 
 .card-body {
   height: 150px;
   background-color: #fff !important; }
 
+.tutor-price {
+  height: 80px; }
+
 .img-container {
   float: left;
-  margin-top: 30px; }
+  width: 60%;
+  margin-top: 20px; }
+
+.text-name {
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 16px;
+  padding-left: 5px;
+  color: #1E2B5E; }
 
 .text {
   float: right;
-  margin-top: 42px;
-  color: #6FBA2E; }
+  margin-top: 38px;
+  width: 40%;
+  height: 45px;
+  font-family: Gilroy-Bold;
+  font-size: 13px;
+  line-height: 16px;
+  color: #6BB81F; }
+
+.about-card {
+  margin-top: 15px;
+  font-family: Gilroy-Regular;
+  font-size: 14px;
+  line-height: 17px;
+  color: rgba(30, 43, 94, 0.7); }
+
+.redirect {
+  padding-left: 30px;
+  text-decoration: underline;
+  text-underline-position: under;
+  color: #000;
+  font-family: Gilroy-Medium;
+  font-size: 15px;
+  line-height: 22px; }
 
 /*# sourceMappingURL=style.css.map */
